--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,8 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "eslint": "^8.52.0",
+    "eslint-plugin-react": "^7.33.2",
     "gh-pages": "^6.0.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
