fix: eslintに従ってバグを修正

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,4 +1,9 @@
 {
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "env": {
         "browser": true,
         "es2021": true
@@ -15,5 +20,6 @@
         "react"
     ],
     "rules": {
+        "react/prop-types": "off"
     }
 }
