--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -17,9 +17,12 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "react-hooks"
     ],
     "rules": {
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
         "react/prop-types": "off"
     }
 }
