--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.52.0",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.0.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
